# opaque

./: .gitignore  CLAUDE.md  Dockerfile  GO_PRODUCTION_PLAN.md  IMPLEMENTATION_PLAN.md  Makefile  PRD.md  PRIVACY_MODEL_QA.md  README.md  ROADMAP.md  SDK.md  delete.go  delete_test.go  e2e_test.go  errors_test.go  go.mod  go.sum  info.go  info_test.go  lifecycle.go  lifecycle_control.go  lifecycle_test.go  metadata.go  metadata_test.go  notes.txt  opaque.go  opaque_test.go  persist.go  persist_test.go  pq_test.go  pyproject.toml  staticcheck.conf
.github/workflows/: benchmarks.yml  ci.yml
api/proto/: gpuhe.proto  opaque.pb.go  opaque.proto  opaque_grpc.pb.go
cmd/bridge-export/: main.go
cmd/check-key-layout/: main.go
cmd/cli/: main.go
cmd/compare-ntt-roots/: main.go
cmd/devserver/: main.go
cmd/dump-intt-ordering/: main.go
cmd/dump-key-format/: main.go
cmd/dump-ntt-roots/: main.go
cmd/encode-compare-diff/: main.go
cmd/encode-compare-go/: main.go
cmd/export-gpu-keys/: main.go
cmd/export-gpu-keys-with-roots/: main.go
cmd/export-gpu-test-keys/: main.go
cmd/gpu-server/: main.go
cmd/search-service/: main.go  main_test.go
cmd/test-ct-convert/: main.go
cmd/test-intt/: main.go
cmd/verify-ntt-go/: main.go
deploy/: docker-compose.yml
deploy/aws/: README.md
deploy/bench-cpu/: .gitignore  README.md  main.tf  outputs.tf  run_bench.sh  run_dbpedia_bench.sh  run_sift100k_bench.sh  setup.sh  setup_dbpedia.sh  variables.tf
deploy/gpu/: .gitignore  README.md  main.tf  outputs.tf  resume_setup.sh  run_benchmarks.sh  run_encode_compare.sh  run_gpu_e2e.sh  setup.sh  variables.tf
deploy/gpu/gpu-he-server/: CMakeLists.txt  batch_dot_product.cpp  bridge_diagnostic.cpp  bridge_final.cpp  bridge_matching_keys.cpp  bridge_suite.cpp  bridge_test.cpp  bridge_with_roots.cpp  dump_ntt_roots.cpp  encode_compare.cpp  intt_ordering.cpp  main.cpp  ntt_key_roundtrip.cpp  verify_bridge.cpp
docs/: ARCHITECTURE.md  BENCHMARKS.md  DBPEDIA_OOM_ANALYSIS.md  GPU_ACCELERATION.md  GPU_FORMAT_BRIDGE.md  LITERATURE_REVIEW.md  M1_DEMO_PLAN.md  MEMORY_PROFILE.md  ROADMAP.md  SECURITY_MODEL.md  THRESHOLD_CKKS.md  THRESHOLD_RETRY_FIX.md  THRESHOLD_SECURITY.md  TIER_2_5_ARCHITECTURE.md
examples/benchmark/: main.go
examples/demo/: main.go
examples/enterprise/: main.go
examples/file-storage/: main.go
examples/hierarchical/: main.go
examples/http-server/: main.go
examples/large-scale/: main.go
examples/sdk-basic/: main.go
examples/sdk-metadata/: main.go
examples/sdk-persistence/: main.go
examples/search/: main.go
examples/tier2/: main.go
go/: BENCHMARKS.md  Makefile  README.md  errors.go  go.mod  go.sum  info.go  metadata.go  opaque.go  opaque_test.go  persist.go  persist_test.go
go/test/: benchmark_test.go  e2e_sdk_test.go  grpc_integration_test.go  hybrid_benchmark_test.go  largescale_test.go  optimized_benchmark_test.go  parallel_benchmark_test.go  sift1m_benchmark_test.go  tier2_benchmark_test.go  tier_comparison_test.go
internal/service/: service.go  service_test.go
internal/session/: session.go  session_test.go
internal/store/: file_store.go  file_store_extra_test.go  file_store_test.go  memory_test.go  store.go
opaque-go/: BENCHMARKS.md  README.md  go.mod  go.sum
opaque-go/test/: benchmark_test.go  largescale_test.go  optimized_benchmark_test.go  parallel_benchmark_test.go
pkg/auth/: auth_test.go  service.go  service_extra_test.go  types.go
pkg/blob/: blob.go  file.go  memory.go  superbucket_test.go
pkg/cache/: batch_centroid_cache.go  batch_centroid_cache_test.go  centroid_cache_test.go
pkg/client/: benchmark_100k_test.go  benchmark_test.go  bernoulli_decoys_test.go  client.go  cluster_diagnostics_test.go  comparison_benchmark_test.go  debug_accuracy_test.go  enterprise_100k_test.go  enterprise_100k_threshold_test.go  enterprise_accuracy_test.go  enterprise_benchmark_test.go  enterprise_hierarchical.go  enterprise_hierarchical_test.go  hierarchical.go  kmeans_accuracy_test.go  privacy.go  privacy_test.go  remote_client.go  sift_accuracy_test.go  tier2.go  tier2_hybrid.go  tier2_test.go  translate_storage_test.go
pkg/cluster/: kmeans.go  kmeans_test.go  util_test.go
pkg/crypto/: bridge_diagnostic_test.go  ciphertext_convert.go  crypto.go  crypto_test.go  direct_provider.go  direct_provider_test.go  engine_pool.go  engine_pool_test.go  gpu_provider.go  gpu_provider_test.go  heongpu_format.go  heongpu_format_test.go  ntt_convert.go  ntt_convert_test.go  provider.go  provider_test.go  rotation_test.go  threshold_provider.go
pkg/embeddings/: client.go  client_test.go  fvecs.go  fvecs_extra_test.go  loader.go  loader_extra_test.go  loader_test.go
pkg/encrypt/: encrypt.go  encrypt_test.go  vector.go
pkg/enterprise/: config.go  enterprise_test.go  store.go  store_extra_test.go
pkg/grpcserver/: grpcserver.go  grpcserver_test.go  interceptors_test.go
pkg/hierarchical/: builder.go  dp_decoys_test.go  enterprise_builder.go  enterprise_test.go  hierarchical_test.go  index.go  kmeans_builder.go  padding_test.go  permutation_test.go  (+1 more)
python/: pyproject.toml
scripts/: benchmark_100k.py  benchmark_parallel.py  demo_full_pipeline.py  demo_real_embeddings.py  download_dbpedia1m.sh  download_gist1m.sh  download_sift10m.sh  download_sift1m.sh
test/: benchmark_test.go  bridge_grpc_test.go  bruteforce_helpers.go  dbpedia1m_benchmark_test.go  e2e_sdk_test.go  gist_pca_benchmark_test.go  glove_pca_benchmark_test.go  glove_probe32_test.go  gpu_e2e_sift100k_test.go  gpu_profiling_benchmark_test.go  gpu_profiling_gist_test.go  grpc_integration_test.go  hybrid_benchmark_test.go  largescale_test.go  optimized_benchmark_test.go  parallel_benchmark_test.go  pq_100k_benchmark_test.go  pq_benchmark_test.go  pq_gist100k_benchmark_test.go  pq_sift100k_benchmark_test.go  pq_sift10m_benchmark_test.go  pq_sift1m_benchmark_test.go  pq_sift5m_benchmark_test.go  sift1m_benchmark_test.go  sift1m_nc256_benchmark_test.go  threshold_benchmark_test.go  tier2_benchmark_test.go  tier_comparison_test.go
tests/: __init__.py  test_crypto.py  test_integration.py
(+118 files in other folders)
