[project]
name = "opaque"
version = "0.2.0"
description = "Privacy-preserving vector search engine using PHE and LSH"
readme = "PRD.md"
requires-python = ">=3.10"
dependencies = [
    "lightphe>=0.0.20",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    # HuggingFace with ONNX Runtime (no torch dependency, more stable on macOS)
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "onnxruntime>=1.15.0",
    "huggingface-hub>=0.16.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opaque"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
